# ziros

./: .codex_pdf_extract.txt  .gitattributes  .gitignore  .gitmodules  .sponsors-link  .zkf-completion-status.json  AGENTS.md  BUILD.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  FORENSIC_ANALYSIS.md  HERMES.md  LICENSE  LICENSE-BSL  LICENSE.md  Makefile  NOTICE.md  PROOF_BOUNDARY.md  README.md  RELAY_SETUP.md  RELEASE_CHECKLIST.md  SECURITY.md  SOUL.md  THIRD_PARTY_NOTICES.md  ZirOS_Dissertation.md  deny.toml  generate_ai_report.py  generate_hostile_audit.py  generate_magnum_opus.py  generate_report.py  generate_valuable_report.py  install.sh  research_trade_finance_competitor_gap_landscape.txt  run_tests.sh  setup-metal.sh  support-matrix.json  ziros  zkf-build.sh  (+1 more)
my_circuit/: Cargo.toml  compiled_plonky3.json  kyc.ir.json  kyc_inputs.json  kyc_proof.json  proof_plonky3.json  recurrence.ir.json  verify_age.ir.json
my_circuit/src/: main.rs
nova_test/: Cargo.toml
nova_test/src/: main.rs
zk_credit/: Cargo.toml  contract.ir.json  inputs.json  proof_groth16.json  verifier.sol
zk_credit/src/: main.rs
zk_rollup/: Cargo.toml  README.md  in1.json  in2.json  rollup.ir.json
zk_rollup/src/: main.rs
zk_underwriter/: Cargo.toml  inputs.json  underwriter.ir.json
zk_underwriter/src/: main.rs
zkf-agent/: Cargo.toml
zkf-agent/src/: brain.rs  bridge.rs  browser.rs  checkpoint.rs  daemon.rs  executor.rs  hermes.rs  lib.rs  llm.rs  mcp.rs  planner.rs  provider.rs  provider_profiles.rs  state.rs  trust_gate.rs  types.rs  web.rs  worktree.rs
zkf-api/: Cargo.toml  README.md  openapi.yaml
zkf-api/src/: auth.rs  db.rs  handlers.rs  jobs.rs  main.rs  metering.rs  solidity.rs  types.rs
zkf-backends/: Cargo.toml  README.md
zkf-backends-pro/: Cargo.toml  README.md
zkf-backends-pro/src/: lib.rs
zkf-backends/src/: aggregation.rs  arkworks.rs  audited_backend.rs  blackbox_native.rs  ceremony.rs  compat.rs  execution_summary.rs  foundry_test.rs  groth16_hex.rs  groth16_proof.rs  groth16_vk.rs  halo2.rs  halo2_bls12_381.rs  hypernova.rs  lib.rs  lib_non_hax.rs  metal_runtime.rs  midnight.rs  midnight_client.rs  midnight_codegen.rs  midnight_native.rs  midnight_tx.rs  native_field.rs  nova_native.rs  plonky3.rs  proof_blackbox_ecdsa_spec.rs  proof_blackbox_hash_spec.rs  proof_fri_exact_spec.rs  proof_groth16_boundary_spec.rs  proof_groth16_exact_spec.rs  proof_halo2_ipa_accumulator_spec.rs  proof_hypernova_exact_spec.rs  proof_lookup_lowering_spec.rs  proof_nova_exact_spec.rs  proof_plonky3_spec.rs  proof_plonky3_surface.rs  r1cs_lowering.rs  range_decomposition.rs  recursive_aggregation.rs  risc_zero.rs  (+4 more)
zkf-backends/tests/: arkworks_roundtrip.rs  blackbox_soundness.rs  blackbox_support.rs  compat_backends_roundtrip.rs  halo2_roundtrip.rs  midnight_native_runtime.rs  midnight_readiness.rs  native_zkvm_roundtrip.rs  nova_native_roundtrip.rs  plonky3_roundtrip.rs  range_limit_provenance.rs  recursive_aggregation_soundness.rs  recursive_integration_hardening.rs  verification_prop.rs  verifier_integrity.rs
zkf-cli/: Cargo.toml  README.md
zkf-cli/assets/: midnight-package-manifest.json
zkf-cli/examples/: resign_subsystem_credential.rs  sovereign-economic-defense-run-manifest.json
zkf-cli/src/: benchmark.rs  cli.rs  compose.rs  main.rs  package_io.rs  runtime_metal.rs  solidity.rs  types.rs  util.rs
zkf-cloudfs/: Cargo.toml
zkf-cloudfs/src/: cloudfs.rs  config.rs  lib.rs  migrate.rs
zkf-command-surface/: Cargo.toml
zkf-command-surface/src/: app.rs  cluster.rs  evm.rs  lib.rs  midnight.rs  proof.rs  release.rs  runtime.rs  shell.rs  subsystem.rs  swarm.rs  truth.rs  types.rs  wallet.rs
zkf-conformance/: Cargo.toml  README.md
zkf-conformance/src/: lib.rs  programs.rs
zkf-core/: Cargo.toml  README.md  fiat-crypto-manifest.json
zkf-core/proptest-regressions/: field.txt
zkf-core/src/: acceleration.rs  aggregation.rs  artifact.rs  artifact_v2.rs  audit.rs  benchmark.rs  capability.rs  ccs.rs  credential.rs  debugger.rs  diagnostics.rs  disclosure.rs  dsl_types.rs  error.rs  field.rs  hir.rs  ir.rs  keystore.rs  lib.rs  normalize.rs  optimizer.rs  optimizer_zir.rs  platform.rs  privacy.rs  proof_ccs_spec.rs  proof_constant_time_bridge.rs  proof_constant_time_spec.rs  proof_kernel.rs  proof_kernel_spec.rs  proof_transform_spec.rs  proof_witness_adapter_spec.rs  proof_witness_generation_spec.rs  recursion.rs  resources.rs  secure_random.rs  setup.rs  solver.rs  stack_safe_json.rs  swarm_signer.rs  tooling.rs  (+5 more)
zkf-core/tests/: debugger_tests.rs  optimizer_tests.rs  package_tests.rs  solver_beta9_tests.rs  solver_tests.rs  verification_prop.rs  witness_tests.rs
zkf-crypto-accel/: Cargo.toml  README.md
zkf-crypto-accel/src/: accelerate_ffi.rs  aes.rs  detect.rs  keccak.rs  lib.rs  montgomery.rs  pmull.rs  sha256.rs  sme.rs
zkf-distributed/: Cargo.toml  README.md
zkf-distributed/src/: bundle.rs  config.rs  coordinator.rs  discovery.rs  error.rs  execution.rs  health.rs  identity.rs  lib.rs  proof_swarm_reputation_spec.rs  protocol.rs  swarm_consensus_core.rs  swarm_coordinator_core.rs  swarm_diplomat_core.rs  swarm_epoch_core.rs  swarm_identity_core.rs  swarm_memory_core.rs  swarm_protocol_core.rs  swarm_reputation_core.rs  swarm_transport_core.rs  telemetry.rs  verification_kani.rs  worker.rs
zkf-distributed/tests/: loopback.rs  verification_prop.rs
zkf-dsl/: Cargo.toml  README.md
zkf-dsl/src/: builtins.rs  lib.rs  lower.rs  parse.rs  types.rs
zkf-dsl/tests/: circuit_macro.rs
zkf-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
zkf-frontend-sdk/: Cargo.toml  README.md
zkf-frontends/: Cargo.toml  README.md
zkf-gadgets/: Cargo.toml  README.md
zkf-gpu/: Cargo.toml  README.md
zkf-integration-tests/: Cargo.toml  README.md
zkf-ir-spec/: Cargo.toml  README.md  runtime-proof-coverage-manifest.json  verification-ledger.json
zkf-keymanager/: Cargo.toml
zkf-lib/: Cargo.toml  README.md
zkf-lsp/: Cargo.toml  README.md  package.json
zkf-metal/: Cargo.toml  README.md  build.rs
zkf-metal-public-cli/: Cargo.toml  README.md
(+1534 files in other folders)
