[package]
name = "my_circuit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
serde_json.workspace = true
zkf-core = { version = "0.1.0", path = "../zkf-core" }
zkf-dsl = { version = "0.1.0", path = "../zkf-dsl" }
zkf-examples = { version = "0.1.0", path = "../zkf-examples" }

[lints]
workspace = true
