[package]
name = "zkf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = [
    "acvm-solver",
    "acvm-solver-beta9",
    "acvm-solver-beta19",
    "native-nova",
    "zkf-backends/native-blackbox-solvers",
]
all-native-backends = ["native-sp1", "native-risc-zero"]
acvm-solver = ["zkf-core/acvm-solver"]
acvm-solver-beta9 = ["zkf-core/acvm-solver-beta9"]
acvm-solver-beta19 = ["zkf-core/acvm-solver-beta19"]
metal-gpu = ["zkf-backends/metal-gpu", "zkf-runtime/metal-gpu"]
native-nova = ["zkf-backends/native-nova", "zkf-backends/nova-compression", "zkf-core/native-nova"]
native-sp1 = ["zkf-backends/native-sp1", "zkf-core/native-sp1"]
native-risc-zero = ["zkf-backends/native-risc-zero", "zkf-core/native-risc-zero"]
neural-engine = ["zkf-runtime/neural-engine"]
distributed = []

[dependencies]
actix-cors = "^0.7.1"
actix-web = { version = "4.11.0", default-features = false }
base_crypto = { package = "midnight-base-crypto", git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-8.0.3" }
zkf-cloudfs = { path = "../zkf-cloudfs" }
zkf-command-surface = { path = "../zkf-command-surface" }
zkf-agent = { path = "../zkf-agent" }
zkf-keymanager = { path = "../zkf-keymanager" }
zkf-storage = { path = "../zkf-storage" }
zkf-runtime = { path = "../zkf-runtime" }
zkf-distributed = { path = "../zkf-distributed" }
zkf-wallet = { path = "../zkf-wallet" }
ed25519-dalek.workspace = true
base64.workspace = true
clap.workspace = true
libc.workspace = true
getrandom.workspace = true
getrandom02.workspace = true
futures = "0.3.31"
introspection = "0.1.0"
ledger = { package = "midnight-ledger", git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-8.0.3", default-features = false, features = ["proving"] }
libcrux-ml-dsa.workspace = true
midnight_proof_server = { package = "midnight-proof-server", git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-8.0.3" }
num-bigint.workspace = true
num-traits.workspace = true
owo-colors.workspace = true
rand.workspace = true
serde.workspace = true
serde_cbor = "0.11"
serde_json.workspace = true
semver.workspace = true
chrono.workspace = true
toml.workspace = true
serialize = { package = "midnight-serialize", git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-8.0.3" }
sha2.workspace = true
storage = { package = "midnight-storage", git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-8.0.3" }
transient_crypto = { package = "midnight-transient-crypto", git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-8.0.3" }
ureq.workspace = true
zkir = { package = "midnight-zkir", git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-8.0.3" }
zkf-backends = { path = "../zkf-backends", default-features = false }
zkf-conformance = { path = "../zkf-conformance" }
zkf-core = { path = "../zkf-core", default-features = false, features = ["full"] }
zkf-examples = { path = "../zkf-examples" }
zkf-frontends = { path = "../zkf-frontends" }
zkf-gadgets = { path = "../zkf-gadgets" }
zkf-lib = { path = "../zkf-lib" }
zkf-registry = { path = "../zkf-registry" }
zkf-ui = { path = "../zkf-ui" }

[target.'cfg(target_os = "macos")'.dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
objc2 = "0.6"
objc2-metal = { version = "0.3", features = ["MTLBuffer", "MTLResource", "MTLTypes"] }

[dev-dependencies]
coin_structure = { package = "midnight-coin-structure", git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-8.0.3" }
rand.workspace = true
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tempfile = "3"
tokio = { version = "1.46.1", features = ["full"] }
zswap = { package = "midnight-zswap", git = "https://github.com/midnightntwrk/midnight-ledger.git", tag = "ledger-8.0.3" }
