[package]
name = "zkf-cloudfs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc2 = "=0.6.4"
objc2-foundation = { version = "=0.3.2", features = ["NSArray", "NSDictionary", "NSError", "NSObject", "NSString", "NSURL"] }

[dev-dependencies]
tempfile = "3"
