[package]
name = "zkf-crypto-accel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARM CPU crypto extensions and Apple silicon acceleration for ZKF"

[features]
default = []

[dependencies]
cfg-if = "1.0"
libc.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
sha2.workspace = true
rand.workspace = true
