[package]
name = "zkf-distributed"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Multi-node distributed proving for ZKF via Thunderbolt 5 RDMA"

[dependencies]
zkf-core = { path = "../zkf-core" }
zkf-backends = { path = "../zkf-backends", optional = true }
zkf-runtime = { path = "../zkf-runtime", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
rand.workspace = true
hkdf = "0.12"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
thiserror = { workspace = true }
log = "0.4"
lz4_flex = "0.11"
ed25519-dalek = "2"
libcrux-ml-dsa = { workspace = true }
rusqlite = { version = "0.33", features = ["bundled"] }

[target.'cfg(hax)'.dependencies]
hax-lib = { git = "https://github.com/cryspen/hax", rev = "1f0259212fa994fb351853026397042c497d07b9" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hostname = "0.4"
mdns-sd = { version = "0.11", optional = true }

[features]
default = ["full", "mdns"]
full = ["dep:zkf-backends", "dep:zkf-runtime"]
kani-minimal = []
mdns = ["dep:mdns-sd"]

[dev-dependencies]
proptest.workspace = true
zkf-examples = { path = "../zkf-examples" }
tempfile = "3"
