[package]
name = "zkf-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "C ABI bridge for ZirOS binary distribution"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zkf-core = { path = "../zkf-core" }
zkf-lib = { path = "../zkf-lib", features = ["full"] }
once_cell.workspace = true
serde_json.workspace = true

[lints]
workspace = true
