[package]
name = "zkf-gadgets"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
zkf-core = { path = "../zkf-core" }
serde = { workspace = true }
serde_json = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
