[package]
name = "zkf-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Stable GPU abstraction interfaces for ZKF accelerators"

[features]
default = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
