[package]
name = "zkf-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# This crate is tests-only; no library.
[lib]
name = "zkf_integration_tests"
path = "src/lib.rs"

[features]
default = ["metal-gpu"]
metal-gpu = ["zkf-backends/metal-gpu"]

[dependencies]
zkf-core = { path = "../zkf-core" }
zkf-backends = { path = "../zkf-backends" }
zkf-distributed = { path = "../zkf-distributed" }
zkf-examples = { path = "../zkf-examples" }
zkf-frontends = { path = "../zkf-frontends" }
zkf-gadgets = { path = "../zkf-gadgets" }
zkf-registry = { path = "../zkf-registry" }
zkf-runtime = { path = "../zkf-runtime" }
zkf-metal = { path = "../zkf-metal" }
zkf-lib = { path = "../zkf-lib" }
num-bigint = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-symmetric = { workspace = true }
rand09 = { workspace = true }
tiny-keccak = { version = "2", features = ["keccak"] }
tempfile = "3"
