[package]
name = "zkf-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ZKF embeddable library — compile, prove, verify, normalize, and type-check ZK circuits"

[features]
default = ["full", "metal-gpu"]
full = ["zkf-core/full"]
frontends = ["dep:zkf-frontends"]
metal-gpu = ["zkf-backends/metal-gpu"]

[dependencies]
acir.workspace = true
acvm_blackbox_solver.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-serialize.workspace = true
ark-snark.workspace = true
zkf-core = { path = "../zkf-core", default-features = false }
zkf-backends = { path = "../zkf-backends", default-features = false, features = ["full"] }
zkf-storage = { path = "../zkf-storage" }
zkf-frontends = { path = "../zkf-frontends", optional = true }
zkf-gadgets = { path = "../zkf-gadgets" }
zkf-ir-spec = { path = "../zkf-ir-spec" }
argon2.workspace = true
bn254_blackbox_solver.workspace = true
ed25519-dalek.workspace = true
libcrux-ml-dsa.workspace = true
num-bigint.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
sha2.workspace = true
stacker.workspace = true

[target.'cfg(hax)'.dependencies]
hax-lib = { git = "https://github.com/cryspen/hax", rev = "1f0259212fa994fb351853026397042c497d07b9" }

[dev-dependencies]
zkf-runtime = { path = "../zkf-runtime" }

[lints]
workspace = true
