[package]
name = "zkf-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Language Server Protocol implementation for ZKF IR programs"

[lib]
name = "zkf_lsp"
path = "src/lib.rs"

[[bin]]
name = "zkf-lsp"
path = "src/main.rs"

[dependencies]
zkf-core = { path = "../zkf-core", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
