[package]
name = "zkf-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Zir language server support for ZirOS"

[dependencies]
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
zkf-lang = { path = "../zkf-lang" }

[lints]
workspace = true
