[package]
name = "zkf-metal-public-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "zkf-metal"
path = "src/main.rs"

[dependencies]
clap.workspace = true
log = { version = "0.4", default-features = false, features = ["max_level_off", "release_max_level_off"] }
serde.workspace = true
serde_json.workspace = true
tracing = { version = "0.1.44", default-features = false, features = ["max_level_off", "release_max_level_off"] }
zkf-backends = { path = "../zkf-backends" }
zkf-lib = { path = "../zkf-lib" }

[lints]
workspace = true
